# torch-quiver

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  Introduction_cn.md  MANIFEST.in  README  README.md  REFERENCE  U  azure-pipelines.yml  b  configure  dist_partition.sh  dist_train.sh  err-new.txt  install.sh  mkdocs.yml  out-new.txt  out.txt  perf.txt  q  requirements.torch.txt  requirements.txt  setup.cfg  setup.py  train.out.txt  train.sh  x
.github/workflows/: ci.yaml  gpu.yaml
auto/: cmake  cuda-cap.c  detect-cuda-cap
auto/cuda/8.8/: requirements.torch.txt
benchmarks/: bench-pyg-product.py  show-data-info.py
benchmarks/async/: bench-async.py
benchmarks/cora/: cuda.py  origin.py  result.txt  run.sh
benchmarks/cpp/: bench_async_algo.cu  bench_quiver_cpu.cpp  bench_quiver_gpu.cu  common.cpp  common.hpp
benchmarks/fakegraph/: dist_sampling_fake_quiver.py  gen_graph.py
benchmarks/feature/: bench_feature.py
benchmarks/generated_graph/: dist_sampling_generated_quiver.py  gen_graph.py
benchmarks/ogbn-mag240m/: README.md  preprocess.py  train.py  train_dgl_multi_node.py  train_pyg.py  train_quiver.py  train_quiver_multi_gpu.py  train_quiver_multi_node.py  train_quiver_multi_node_unbalance.py
benchmarks/ogbn-mag240m/dist_dgl/: ip_config.txt  partiton_graph.py  train_dist.py
benchmarks/ogbn-papers100M/: README.md  dist_sampling_ogb_paper100M_quiver.py  preprocess.py  pyg_zero_copy_shard_tensor.py  train_dgl_multi_node.py  train_quiver_multi_node.py
benchmarks/ogbn_products_sage/: async.py  cuda.py  cuda_sample.py  cuda_sampler.py  dgl_base.py  dist_sampling.py  dynamic.py  gat_async.py  gen.py  graphsaint_orig.py  multi-async.py  origin.py  page_migration_baseline.py  proc.py  proc_base.py  proc_base_zero_copy_shard_tensor.py  proc_feature.py  proc_zero_copy.py  pyg_baseline_2_device.py  pyg_zero_copy_shard_tensor.py  result.txt  run.sh  shard_tensor_baseline.py  shuffle.py  zero_copy_base_line.py
benchmarks/ogbn_products_sage/deepgcn/: async.py  ogbn_proteins_deepgcn.py
benchmarks/ogbn_products_sage/saint/: async.py  async_gat.py  async_quiver.py  graphsaint_edge.py  graphsaint_gat.py  (+2 more)
benchmarks/reddit/: cuda.py  origin.py  run.sh
benchmarks/sample/: bench_sampler.py  sampler.py
docker/: Dockerfile  README.md
docs/: Introduction_cn.md  Introduction_en.md  Makefile  README.md  api.md  dist.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: cpu_sample.cpp  cuda_sample.cpp  e-cuda.py  e1.py  graph.hpp  quiver_example.cpp  quiver_example.py
examples/dgl/: README.md  ogbn_products_sage_dgl.py  ogbn_products_sage_quiver.py
examples/ogbn_products_sage/: dgl_base.py  pyg_zero_copy_shard_tensor.py
examples/pyg/: graph_sage_unsup_pyg.py  graph_sage_unsup_quiver.py  ogbn_products_sage_pyg.py  ogbn_products_sage_quiver.py  reddit_quiver.py
experiments/cpu-scaling/: README  parse_log.py  run-cpu-gpu-scaling.sh
scripts/: install-cuda.sh  install-horovod.sh  install-kungfu.sh  install-torch.sh  lint.sh  measure.sh
srcs/cmake/: Findstdtracer.cmake  benchmarks.cmake  common.cmake  cuda.cmake  fetch_stdtracer.cmake  lib.cmake  tests.cmake  torch.cmake
srcs/config/: config.py
tests/: test_page_migration.py  test_quiver.cu  test_quiver.py
tests/cpp/: shardTensorTest.cu  shard_tensor.cu.hpp  test_async_algo.cu  test_hybrid.cpp  test_quiver.cu  test_quiver_cpu.cpp  test_reindex.cu  test_sample_layer.cpp  test_shard_tensor_gather.cpp  testing.hpp
tests/cpu/: test_quiver.py
tests/dlrm/: .gitignore  README.md  data.py  data_utils.py  dlrm.py  run_dlrm.py
(+122 files in other folders)
